<resources>
    <string name="app_name">Giants Gym</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="mobile">Mobile Number</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="user_name">User Name</string>
    <string name="pass">Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="forget_pass">Forget Password ?..</string>
    <string name="sign_in">Sign In Now</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.
    </string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_admin_home">AdminHomeActivity</string>


    <string name="YOUTUBE_API_KEY">AIzaSyAoMlQeY-wlSajF-O5DzMpxgUq7Q-bp6LQ</string>

</resources>
