<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.PasswordActivity">
   <LinearLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:paddingTop="0dp"
       android:orientation="vertical"
       android:layout_gravity="center">
       <ImageView
           android:layout_width="match_parent"
           android:layout_height="150dp"
           android:paddingBottom="20dp"
           android:src="@drawable/logo"/>
       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:layout_gravity="center"
           android:orientation="vertical">
           <TextView
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:layout_gravity="center_horizontal"
               android:text="@string/lbl_forgot_password"
               android:padding="10dp"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:textSize="16dp"/>

           <TextView
               android:gravity="center_horizontal"
               android:layout_height="wrap_content"
               android:layout_width="wrap_content"
               android:layout_marginBottom="10dp"
               android:text="@string/forgot_password_msg"
               android:layout_marginRight="8dp"
               android:layout_marginLeft="8dp"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:textSize="16dp"/>

           <EditText
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:id="@+id/email"
               android:inputType="textEmailAddress"
               android:hint="@string/email"
               android:background="@drawable/button_shape"
               android:textColorHint="@color/darkgrey"
               android:layout_marginLeft="10dp"
               android:paddingLeft="10dp"
               android:padding="10dp"
               android:layout_marginRight="10dp"/>

           <Button
               android:layout_height="wrap_content"
               android:layout_width="match_parent"
               android:id="@+id/btn_reset_password"
               android:text="@string/btn_reset_password"
               android:background="@drawable/background_shape"
               android:layout_marginTop="10dp"
               android:layout_marginLeft="40dp"
               android:layout_marginRight="40dp"
               android:textStyle="bold"
               android:textColor="@color/white"
               android:padding="10dp"/>

           <TextView
               android:gravity="center"
               android:layout_height="0dp"
               android:layout_weight="5"
               android:layout_width="match_parent"
               android:id="@+id/signinTV"
               android:text="@string/sign_in"
               android:padding="10dp"
               android:textStyle="bold"
               android:textColor="@color/black"
               android:textSize="16dp"/>
           <ProgressBar
               android:layout_height="0dp"
               android:layout_weight="5"
               android:layout_width="140dp"
               android:visibility="gone"
               android:layout_gravity="center"
               android:id="@+id/progressBar"/>
       </LinearLayout>

   </LinearLayout>

</ScrollView>