<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".user.SignInActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    android:orientation="vertical"
    android:layout_gravity="center">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:paddingBottom="20dp"
        android:src="@drawable/logo"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_weight="60">
        <EditText
            android:id="@+id/email_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:background="@drawable/button_shape"
            android:textColorHint="@color/darkgrey"
            android:layout_marginLeft="10dp"
            android:paddingLeft="10dp"
            android:padding="10dp"
            android:layout_marginRight="10dp"/>

        <android.support.design.widget.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:passwordToggleEnabled="true"
            app:passwordToggleDrawable="@drawable/item_selector"
            app:passwordToggleTint="@color/colorPrimary"
            >
            <android.support.design.widget.TextInputEditText

                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:hint="@string/pass"
                android:id="@+id/pass_in"
                android:background="@drawable/button_shape"
                android:textColorHint="@color/darkgrey"
                android:layout_marginTop="5dp"
                android:paddingLeft="10dp"
                android:padding="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/background_shape"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:textColor="@color/white"
            android:text="@string/sign_in"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/forget_pass" />


        <TextView
            android:id="@+id/signup_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="16dp"
            android:text="Don't have account?Sign up now" />
        <ProgressBar
            android:layout_height="100dp"
            android:layout_width="100dp"
            android:visibility="gone"
            android:layout_gravity="center"
            android:id="@+id/progressBarin"/>
    </LinearLayout>


</LinearLayout>
</ScrollView>